# pg_semantic_operators

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install-docker.md  models.json.example  pg_semantic_operators.control  pyproject.toml  start.sh
.claude/: settings.json
docs/: README_zh.md  ai_query_improvement_plan.md  batch-processing-design.md
docs/superpowers/plans/: 2026-03-30-ai-image-implementation.md  2026-03-31-ai-audio-implementation.md
docs/superpowers/specs/: 2026-03-30-ai-image-design.md
pg_semantic_operators/: __init__.py  client.py  config.py  operators.py
pg_semantic_operators/operators/: __init__.py  ai_audio.py  ai_audio_helpers.py  ai_filter.py  ai_image.py  ai_image_helpers.py  ai_query.py  batch.py
pg_semantic_operators/operators/ai_query/: __init__.py  core.py  prompt_builder.py  schema_linking.py  security.py  validator.py
python/: __init__.py  client.py  config.py  operators.py
sql/: pg_semantic_operators--1.0.sql  pg_semantic_operators.sql  test.sql  test_batch.sql
tests/: compare_filter.py  debug_filter.py  debug_gpt.py  debug_messages.py  debug_minimax.py  quick_test.py  test_audio.py  test_image_helpers.py  test_models.py
tests/test_ai_query/: test_core.py  test_prompt_builder.py  test_schema_linking.py  test_security.py  test_validator.py
