[project]
name = "pg_semantic_operators"
version = "0.1.0"
description = "PostgreSQL 语义算子扩展"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "anthropic",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pg_semantic_operators"]

[tool.hatch.build.targets.sdist]
include = ["pg_semantic_operators"]
